Committing changes to master

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,14 @@
+
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+
+.mm{
+    font-family: 'Pacifico', cursive !important;
+    z-index:2!important;
+    position:relative;
+}
+
 body{
- background:url('/pics/body_bottom.jpg') cover bottom no-repeat; 
+ background:url('/pics/body_bottom.jpg') cover bottom no-repeat;
 }
 header{
   background-color:gray;
@@ -7,7 +16,9 @@ header{
 nav{
   background-color:#ffc601 !important;
   color:#191919;
-  margin-top:-4px;
+  margin-top:-2px;
+  z-index:0 !important;
+  position:relative;
 }
 
 .header-img{
@@ -39,4 +50,8 @@ text-align: center;
 #mem{
     min-height:400px !important;
     max-height:400px !important;
+}
+
+.opening{
+    font-size:20px;
 }
