--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Pacifico);
+
+
 body{
  background:url('/pics/body_bottom.jpg') cover bottom no-repeat; 
 }
@@ -36,14 +39,25 @@ text-align: center;
     padding-top:15px;
 }
 
-#mem{
+#mem,
+#sub{
     min-height:400px !important;
     max-height:400px !important;
 }
 
 .link:hover,
-#mem:hover{
+#sub:hover{
     border-width:1px;
     border-color:black;
     background:no-repeat;
+}
+
+.mm{
+ font-family: 'Pacifico', cursive;
+ z-index:1;
+ position:relative;
+}
+
+.opening{
+    font-size:1.5em;
 }
